<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@drawable/firebase_lockup_400"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title_receive"/>

    <TextView
        android:id="@+id/link_view_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/msg_no_deep_link"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_send"/>

    <EditText
        android:id="@+id/link_path_to_append"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_margin="5dp"
        android:text="apath/toappend/tothelink"/>

    <Button
        android:id="@+id/button_create_link"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/create" />

    <TextView
        android:id="@+id/link_view_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        tools:text="none"/>

    <RadioGroup
        android:id="@+id/app_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Twt"
            />
        <RadioButton
            android:id="@+id/radio_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Whts"
            />
        <RadioButton
            android:id="@+id/radio_messenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FbM"
            />
        <RadioButton
            android:id="@+id/radio_kik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kik"
            />
        <RadioButton
            android:id="@+id/radio_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ln"
            />
        <RadioButton
            android:id="@+id/radio_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="G"
            />
    </RadioGroup>

    <Button
        android:id="@+id/button_share"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:text="@string/share" />

    <Button
        android:id="@+id/button_share2"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:text="Share with custom invite" />
</LinearLayout>
